Bug 328289 - dtd's should be read using 4096 bytes buffers, instead of 1024 bytes buffers. Patch by Alfred Kayser <alfredkayser@nl.ibm.com>, r+sr=bzbarsky